--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href=" ../static/css/styles.css">
 </head>
 <body>
-    <p th:text="|Hello, ${name}!|" />
+    <h1 th:text="|Hello, ${name}!|" />
     <p>Blah Blah Blah cool</p>
-    <p>Go Back <a href="/">here</a></p>
+    <a href="/">Back</a>
 </body>
 </html>
