--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,10 @@
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href=" ../static/css/styles.css">
 </head>
 <body>
     <h1>Welcome Home!</h1>
-    <p>Go Back<a href="/">here</a></p>
+    <a href="/">Back</a>
 </body>
 </html>
